--- a/Socket_c/CMakeLists.txt
+++ b/Socket_c/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Socket_c C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(Socket_c server.c client.c)
+add_executable(Socket_c server.c client.c header.h)
